@@ -86,7 +86,7 @@ else{
 	$User->authenticate ( $auth->getNameId(), '', true);
 
 	// Redirect user where he came from, if unknown go to dashboard.
-	if( !empty($_COOKIE['phpipamredirect']) )   { header("Location: ".escape_input($_COOKIE['phpipamredirect'])); }
+	if( !empty($_COOKIE['phpipamredirect']) )   { header("Location: ".safeurlencode($_COOKIE['phpipamredirect'])); }
 	else                                        { header("Location: ".create_link("dashboard")); }
 
 }
